crates/keron-lang/tests/corpus/errors/parse/keyword_as_name.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: `val` is a reserved keyword
  --> 1:5
  |
1 | val val: Int = 1
  |     ^
